Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script id="recipe-form-template" type="text/x-handlebars-template">
       <form id="recipe-form" onsubmit="handleSubmit(); return false;">
         Name: <input type="text" id="name" value="{{name}}" />  <br>
-        Description: <input type="textarea" id="description" value="{{description}}"> <br>
+        Description: <input type="textarea" id="description" value="{{description}}" /> <br>
         Ingredients: <br>
         {{#each ingredients}}
           <input type="text" name="ingredients" value="{{this}}" /><br>
